--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
 		"@radix-ui/react-dialog": "^1.1.6",
 		"@radix-ui/react-dropdown-menu": "^2.1.6",
 		"@radix-ui/react-label": "^2.1.2",
+		"@radix-ui/react-select": "^2.1.6",
 		"@radix-ui/react-separator": "^1.1.2",
 		"@radix-ui/react-slot": "^1.1.2",
 		"@radix-ui/react-tooltip": "^1.1.8",
@@ -38,6 +39,7 @@
 	},
 	"devDependencies": {
 		"@eslint/eslintrc": "^3",
+		"@tailwindcss/postcss": "^4",
 		"@types/node": "^20",
 		"@types/react": "^19",
 		"@types/react-dom": "^19",
@@ -49,7 +51,6 @@
 		"prettier": "3.4.2",
 		"prettier-plugin-tailwindcss": "0.6.11",
 		"tailwindcss": "^4",
-		"typescript": "^5",
-		"@tailwindcss/postcss": "^4"
+		"typescript": "^5"
 	}
 }
